tests/snapshots/feature-modifier-group.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 1.3333333333333333,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 1.3333333333333333,
        duration: 1.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.3333333333333333,
        duration: 1.3333333333333333,
        channel: 0,
        note: 60,
        velocity: 60,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 2.6666666666666665,
        duration: 0.3333333333333335,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.6666666666666665,
        duration: 0.3333333333333335,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 0.33333333333333304,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 3.333333333333333,
        duration: 0.3333333333333335,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 3.6666666666666665,
        duration: 0.3333333333333335,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 3.6666666666666665,
        duration: 0.3333333333333335,
        channel: 0,
        note: 60,
        velocity: 100,
    },
]
