tests/snapshots/feature-modifier.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 0,
        note: 62,
        velocity: 80,
    },
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 9,
        note: 36,
        velocity: 127,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 0,
        note: 60,
        velocity: 80,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 0,
        note: 60,
        velocity: 80,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 0,
        note: 60,
        velocity: 80,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
]
