tests/snapshots/feature-nested-tracks.loom.snap
---
source: tests/examples.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 0.5,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 0.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 0.25,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 0.25,
        duration: 0.25,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 0.3333333333333333,
        duration: 0.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 0.5,
        duration: 0.5,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 0.5,
        duration: 0.25,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 0.6666666666666666,
        duration: 0.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 0.75,
        duration: 0.25,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 0.5,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 0.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.3333333333333333,
        duration: 0.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.5,
        duration: 0.5,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.6666666666666665,
        duration: 0.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 0.5,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 0.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 0.5,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 2.3333333333333335,
        duration: 0.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.5,
        duration: 0.5,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.5,
        duration: 0.25,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 2.6666666666666665,
        duration: 0.3333333333333333,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 2.75,
        duration: 0.25,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 0.5,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 3.5,
        duration: 0.5,
        channel: 9,
        note: 38,
        velocity: 100,
    },
]
