tests/snapshots/feature-pitch-shift.loom.snap
---
source: tests/examples.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: 84,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 1.3333333333333333,
        channel: 10,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 1.3333333333333333,
        duration: 1.3333333333333333,
        channel: 10,
        note: 38,
        velocity: 100,
    },
]
