tests/snapshots/feature-repeat-complex.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 2.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 2.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 2.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 2.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 10.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 10.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 2.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 2.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 16.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 16.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 16.0,
        duration: 2.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 16.0,
        duration: 2.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 18.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 18.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 20.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 20.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 20.0,
        duration: 4.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 20.0,
        duration: 4.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 22.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 22.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 24.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 24.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 24.0,
        duration: 2.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 24.0,
        duration: 2.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 26.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 26.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 28.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 28.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 28.0,
        duration: 2.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 28.0,
        duration: 2.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 30.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 30.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 32.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 32.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 32.0,
        duration: 2.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 32.0,
        duration: 2.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 34.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 34.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 36.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 36.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 36.0,
        duration: 2.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 36.0,
        duration: 2.0,
        channel: 1,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 38.0,
        duration: 2.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 38.0,
        duration: 2.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
]
