tests/snapshots/feature-repeat.loom.snap
---
source: tests/examples.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 0,
        note: 74,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 1.3333333333333333,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 2.6666666666666665,
        duration: 1.3333333333333333,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 4.0,
        channel: 0,
        note: 74,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 4.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 4.0,
        channel: 0,
        note: 74,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 1.3333333333333333,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 10.666666666666666,
        duration: 1.3333333333333333,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 4.0,
        channel: 0,
        note: 74,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 4.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
]
