tests/snapshots/feature-solo-mute.loom.snap
---
source: tests/examples_test.rs
assertion_line: 47
expression: events
---
[
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.0,
            duration: 1.0,
            channel: 9,
            note: 36,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.0,
            duration: 1.0,
            channel: 9,
            note: 38,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.0,
            duration: 1.0,
            channel: 9,
            note: 36,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.0,
            duration: 1.0,
            channel: 9,
            note: 38,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 4.0,
            duration: 1.0,
            channel: 9,
            note: 36,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 5.0,
            duration: 1.0,
            channel: 9,
            note: 38,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 6.0,
            duration: 1.0,
            channel: 9,
            note: 36,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 7.0,
            duration: 1.0,
            channel: 9,
            note: 38,
            velocity: 100,
        },
    },
]
